[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notion-webhook"
version = "0.1.0"
description = "FastAPI application to receive Notion webhooks"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "fastapi==0.111.0",
    "httpx==0.28.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "uvicorn[standard]==0.30.1",
]

[project.optional-dependencies]
postgres = [
    "pg8000>=1.31,<1.32",
]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==0.23.8",
    "pytest-mock==3.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
reload = true
